@@ -14,9 +14,8 @@ import org.elasticsearch.ingest.RandomDocumentPicks;
 import org.elasticsearch.ingest.TestIngestDocument;
 import org.elasticsearch.test.ESTestCase;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 
 import static org.elasticsearch.ingest.IngestDocumentMatcher.assertIngestDocument;
@@ -31,8 +30,8 @@ public class GrokProcessorTests extends ESTestCase {
         GrokProcessor processor = new GrokProcessor(
             randomAlphaOfLength(10),
             null,
-            Collections.singletonMap("ONE", "1"),
-            Collections.singletonList("%{ONE:one}"),
+            Map.of("ONE", "1"),
+            List.of("%{ONE:one}"),
             fieldName,
             false,
             false,
@@ -49,8 +48,8 @@ public class GrokProcessorTests extends ESTestCase {
         GrokProcessor processor = new GrokProcessor(
             randomAlphaOfLength(10),
             null,
-            Collections.emptyMap(),
-            Collections.singletonList("(?<a>(?i)A)"),
+            Map.of(),
+            List.of("(?<a>(?i)A)"),
             fieldName,
             false,
             false,
@@ -67,8 +66,8 @@ public class GrokProcessorTests extends ESTestCase {
         GrokProcessor processor = new GrokProcessor(
             randomAlphaOfLength(10),
             null,
-            Collections.singletonMap("ONE", "1"),
-            Collections.singletonList("%{ONE:one}"),
+            Map.of("ONE", "1"),
+            List.of("%{ONE:one}"),
             fieldName,
             false,
             false,
@@ -87,8 +86,8 @@ public class GrokProcessorTests extends ESTestCase {
             () -> new GrokProcessor(
                 randomAlphaOfLength(10),
                 null,
-                Collections.singletonMap("ONE", "1"),
-                Collections.singletonList("%{NOTONE:not_one}"),
+                Map.of("ONE", "1"),
+                List.of("%{NOTONE:not_one}"),
                 fieldName,
                 false,
                 false,
@@ -106,8 +105,8 @@ public class GrokProcessorTests extends ESTestCase {
         GrokProcessor processor = new GrokProcessor(
             randomAlphaOfLength(10),
             null,
-            Collections.emptyMap(),
-            Collections.singletonList(fieldName),
+            Map.of(),
+            List.of(fieldName),
             fieldName,
             false,
             false,
@@ -124,8 +123,8 @@ public class GrokProcessorTests extends ESTestCase {
         GrokProcessor processor = new GrokProcessor(
             randomAlphaOfLength(10),
             null,
-            Collections.singletonMap("ONE", "1"),
-            Collections.singletonList("%{ONE:one}"),
+            Map.of("ONE", "1"),
+            List.of("%{ONE:one}"),
             fieldName,
             false,
             false,
@@ -143,8 +142,8 @@ public class GrokProcessorTests extends ESTestCase {
         GrokProcessor processor = new GrokProcessor(
             randomAlphaOfLength(10),
             null,
-            Collections.singletonMap("ONE", "1"),
-            Collections.singletonList("%{ONE:one}"),
+            Map.of("ONE", "1"),
+            List.of("%{ONE:one}"),
             fieldName,
             false,
             true,
@@ -161,8 +160,8 @@ public class GrokProcessorTests extends ESTestCase {
         GrokProcessor processor = new GrokProcessor(
             randomAlphaOfLength(10),
             null,
-            Collections.singletonMap("ONE", "1"),
-            Collections.singletonList("%{ONE:one}"),
+            Map.of("ONE", "1"),
+            List.of("%{ONE:one}"),
             fieldName,
             false,
             false,
@@ -179,8 +178,8 @@ public class GrokProcessorTests extends ESTestCase {
         GrokProcessor processor = new GrokProcessor(
             randomAlphaOfLength(10),
             null,
-            Collections.singletonMap("ONE", "1"),
-            Collections.singletonList("%{ONE:one}"),
+            Map.of("ONE", "1"),
+            List.of("%{ONE:one}"),
             fieldName,
             false,
             true,
@@ -196,8 +195,8 @@ public class GrokProcessorTests extends ESTestCase {
         GrokProcessor processor = new GrokProcessor(
             randomAlphaOfLength(10),
             null,
-            Collections.singletonMap("ONE", "1"),
-            Collections.singletonList("%{ONE:one}"),
+            Map.of("ONE", "1"),
+            List.of("%{ONE:one}"),
             fieldName,
             false,
             false,
@@ -214,8 +213,8 @@ public class GrokProcessorTests extends ESTestCase {
         GrokProcessor processor = new GrokProcessor(
             randomAlphaOfLength(10),
             null,
-            Collections.singletonMap("ONE", "1"),
-            Collections.singletonList("%{ONE:one}"),
+            Map.of("ONE", "1"),
+            List.of("%{ONE:one}"),
             fieldName,
             false,
             true,
@@ -237,7 +236,7 @@ public class GrokProcessorTests extends ESTestCase {
             randomAlphaOfLength(10),
             null,
             patternBank,
-            Arrays.asList("%{ONE:one}", "%{TWO:two}", "%{THREE:three}"),
+            List.of("%{ONE:one}", "%{TWO:two}", "%{THREE:three}"),
             fieldName,
             false,
             false,
@@ -261,7 +260,7 @@ public class GrokProcessorTests extends ESTestCase {
             randomAlphaOfLength(10),
             null,
             patternBank,
-            Arrays.asList("%{ONE:one}", "%{TWO:two}", "%{THREE:three}"),
+            List.of("%{ONE:one}", "%{TWO:two}", "%{THREE:three}"),
             fieldName,
             true,
             false,
@@ -284,7 +283,7 @@ public class GrokProcessorTests extends ESTestCase {
             randomAlphaOfLength(10),
             null,
             patternBank,
-            Arrays.asList("%{ONE:one}"),
+            List.of("%{ONE:one}"),
             fieldName,
             true,
             false,
@@ -297,17 +296,17 @@ public class GrokProcessorTests extends ESTestCase {
 
     public void testCombinedPatterns() {
         String combined;
-        combined = GrokProcessor.combinePatterns(Arrays.asList(""), false);
+        combined = GrokProcessor.combinePatterns(List.of(""), false);
         assertThat(combined, equalTo(""));
-        combined = GrokProcessor.combinePatterns(Arrays.asList(""), true);
+        combined = GrokProcessor.combinePatterns(List.of(""), true);
         assertThat(combined, equalTo(""));
-        combined = GrokProcessor.combinePatterns(Arrays.asList("foo"), false);
+        combined = GrokProcessor.combinePatterns(List.of("foo"), false);
         assertThat(combined, equalTo("foo"));
-        combined = GrokProcessor.combinePatterns(Arrays.asList("foo"), true);
+        combined = GrokProcessor.combinePatterns(List.of("foo"), true);
         assertThat(combined, equalTo("foo"));
-        combined = GrokProcessor.combinePatterns(Arrays.asList("foo", "bar"), false);
+        combined = GrokProcessor.combinePatterns(List.of("foo", "bar"), false);
         assertThat(combined, equalTo("(?:foo)|(?:bar)"));
-        combined = GrokProcessor.combinePatterns(Arrays.asList("foo", "bar"), true);
+        combined = GrokProcessor.combinePatterns(List.of("foo", "bar"), true);
         assertThat(combined, equalTo("(?<_ingest._grok_match_index.0>foo)|(?<_ingest._grok_match_index.1>bar)"));
     }
 
@@ -323,7 +322,7 @@ public class GrokProcessorTests extends ESTestCase {
             randomAlphaOfLength(10),
             null,
             patternBank,
-            Arrays.asList("%{ONE:first}-%{TWO:second}", "%{ONE:first}-%{THREE:second}"),
+            List.of("%{ONE:first}-%{TWO:second}", "%{ONE:first}-%{THREE:second}"),
             fieldName,
             randomBoolean(),
             randomBoolean(),
@@ -334,7 +333,7 @@ public class GrokProcessorTests extends ESTestCase {
         assertThat(doc.getFieldValue("second", String.class), equalTo("3"));
     }
 
-    public void testFirstWinNamedCapture() throws Exception {
+    public void testShouldCaptureAllSameNameGroupsAsList() throws Exception {
         String fieldName = RandomDocumentPicks.randomFieldName(random());
         IngestDocument doc = RandomDocumentPicks.randomIngestDocument(random(), new HashMap<>());
         doc.setFieldValue(fieldName, "12");
@@ -344,14 +343,14 @@ public class GrokProcessorTests extends ESTestCase {
             randomAlphaOfLength(10),
             null,
             patternBank,
-            Collections.singletonList("%{ONETWO:first}%{ONETWO:first}"),
+            List.of("%{ONETWO:first}%{ONETWO:first}"),
             fieldName,
             randomBoolean(),
             randomBoolean(),
             MatcherWatchdog.noop()
         );
         processor.execute(doc);
-        assertThat(doc.getFieldValue("first", String.class), equalTo("1"));
+        assertEquals(doc.getFieldValue("first", List.class), List.of("1", "2"));
     }
 
     public void testUnmatchedNamesNotIncludedInDocument() throws Exception {
@@ -365,7 +364,7 @@ public class GrokProcessorTests extends ESTestCase {
             randomAlphaOfLength(10),
             null,
             patternBank,
-            Collections.singletonList("%{ONETWO:first}|%{THREE:second}"),
+            List.of("%{ONETWO:first}|%{THREE:second}"),
             fieldName,
             randomBoolean(),
             randomBoolean(),
